--- a/extension.ini
+++ b/extension.ini
@@ -1,5 +1,7 @@
-# ImageFilterCollection extension is a plugin for the Datenstrom Yellow »ImageFilter« extension. 
-# ImageFilter extension is required.
+# »ImageFilterCollection« is an extension for ImageFilter.
+# »ImageFilterCollection« offers space for your own filters and contains four example filters.
+# These examples show how a filter is constructed. Unless absolutely necessary, I will not update »ImageFilterCollection«.
+# This way your own filters are safe in »ImageFilterCollection«. 
 
 Extension: ImageFilterCollection
 Version: 0.9.1
